[package]
name = "refinement"
version = "0.6.0"
authors = ["Brady Dean <2bdkid@gmail.com>", "Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["no_std"]
repository = "https://github.com/2bdkid/refinement"
description = "Convenient creation of type-safe refinement types."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[features]
default = ["std"]
std = []
serde = ["dep:serde"]